fixing alignment of offset2 and offset4 classes.

--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -1149,7 +1149,7 @@ body.sponsors {
         margin: 0 27.5%;
       }
       .offset2 {
-        margin: 0 27.5%;
+        margin-left: 27.5%;
       }
     }
     @media (min-width: 979px) {
@@ -1161,7 +1161,7 @@ body.sponsors {
         margin: 0 35%;
       }
       .offset2 {
-        margin: 0 16.5%;
+        margin-left: 18.5%;
       }
     }
   }
